# opensnitch-tui

./: .gitignore  Cargo.toml  README.md  build.rs
scripts/: setup-daemon.sh
src/: lib.rs  main.rs
src/app/: actions.rs  events.rs  mod.rs  state.rs
src/config/: keybinds.rs  mod.rs  settings.rs
src/db/: mod.rs  queries.rs  schema.rs  sqlite.rs
src/grpc/: mod.rs  notifications.rs  server.rs  service.rs  types.rs
src/models/: alert.rs  connection.rs  firewall.rs  mod.rs  node.rs  operator.rs  rule.rs  statistics.rs
src/ui/: app.rs  layout.rs  mod.rs  theme.rs
src/ui/dialogs/: confirm.rs  connection_details.rs  fw_rule.rs  mod.rs  preferences.rs  prompt.rs  rule_editor.rs
src/ui/tabs/: alerts.rs  connections.rs  firewall.rs  mod.rs  nodes.rs  rules.rs  statistics.rs
src/ui/widgets/: form.rs  mod.rs  popup.rs  searchbar.rs  statusbar.rs  table.rs  tree.rs
src/utils/: duration.rs  mod.rs  network.rs  process.rs
